Fixed to use the roundborder prop because the border is eaten when in high contrast mode
Enact-DCO-1.0-Signed-off-by: Hyelyn Kim (myelyn.kim@lge.com)

--- a/Chips/Chip.module.less
+++ b/Chips/Chip.module.less
@@ -11,10 +11,6 @@
 			margin: @lime-chip-margin;
 			min-width: @lime-chip-min-width;
 		}
-
-		.bg {
-			border-radius: @lime-chip-border-radius;
-		}
 	}
 
 	.deleteButtonContainer {
