--- a/styles/variables.less
+++ b/styles/variables.less
@@ -428,7 +428,6 @@
 
 // Chip
 // ---------------------------------------
-@lime-chip-border-radius: var(--semantic-radius-full);
 @lime-chip-margin: 24px;
 @lime-chip-button-spacing: 36px;
 @lime-chip-min-width: 108px;
